# TFSI

./: CHANGELOG.md  readme.md  tagless-interpreter.cabal  tfsi.cabal
app/: Compile.hs  Core.hs  Ext.hs  Extension.hs  Interpreter.hs  Main.hs  Push.hs  Test.hs  Typed.hs
test/: TestCore.hs  TestExt.hs  Verify.hs
