cabal-version:      2.4
name:               tagless-interpreter
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             An
maintainer:         annp0@icloud.com

-- A copyright notice.
-- copyright:
-- category:

library
    exposed-modules:
        Core
        Ext
    default-extensions:
        TypeSynonymInstances
        FlexibleInstances
        InstanceSigs
    build-depends:    
        base ^>=4.16.4.0
    hs-source-dirs:   app
    default-language: Haskell2010
    
executable tagless-interpreter
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
        base ^>=4.16.4.0
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite test
    -- Base language which the package is written in.
    default-language: Haskell2010

    -- The interface type and version of the test suite.
    type:             exitcode-stdio-1.0

    -- Directories containing source files.
    hs-source-dirs:   test

    -- The entrypoint to the test suite.
    main-is:          Verify.hs

    -- Test dependencies.
    build-depends:    
        base ^>=4.16.4.0,
        tagless-interpreter,
        HUnit
